Closed Bug 1659681 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::gl::SharedSurface_SurfaceTexture::~SharedSurface_SurfaceTexture]

Categories

(Core :: Graphics, defect, P3)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- wontfix
firefox81 --- wontfix
firefox82 --- fixed

People

(Reporter: jnicol, Assigned: snorp)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

I hit this crash after resuming Fenix nightly after the app had been in the background for a while. I think I was opening hackernews which I doubt has any webgl, but perhaps a background tab did.

This bug is for crash report bp-73b68839-bc3d-44c7-8fe0-497f20200818.

Top 10 frames of crashing thread:

0 libxul.so mozilla::gl::SharedSurface_SurfaceTexture::~SharedSurface_SurfaceTexture gfx/gl/SharedSurfaceEGL.cpp:176
1 libxul.so mozilla::gl::SharedSurface_SurfaceTexture::~SharedSurface_SurfaceTexture gfx/gl/SharedSurfaceEGL.cpp:167
2 libxul.so std::__ndk1::__deque_base<std::__ndk1::shared_ptr<mozilla::gl::SharedSurface>, std::__ndk1::allocator<std::__ndk1::shared_ptr<mozilla::gl::SharedSurface> > >::clear /builds/worker/fetches/android-ndk/sources/cxx-stl/llvm-libc++/include/deque:1180
3 libxul.so std::__ndk1::__deque_base<std::__ndk1::shared_ptr<mozilla::gl::SharedSurface>, std::__ndk1::allocator<std::__ndk1::shared_ptr<mozilla::gl::SharedSurface> > >::~__deque_base /builds/worker/fetches/android-ndk/sources/cxx-stl/llvm-libc++/include/deque:1117
4 libxul.so mozilla::gl::SwapChain::~SwapChain gfx/gl/GLScreenBuffer.cpp:117
5 libxul.so mozilla::WebGLContext::~WebGLContext dom/canvas/WebGLContext.cpp:177
6 libxul.so mozilla::WebGLContext::~WebGLContext dom/canvas/WebGLContext.cpp:177
7 libxul.so mozilla::HostWebGLContext::~HostWebGLContext dom/canvas/HostWebGLContext.cpp:89
8 libxul.so mozilla::HostWebGLContext::~HostWebGLContext dom/canvas/HostWebGLContext.cpp:85
9 libxul.so mozilla::webgl::NotLostData::~NotLostData dom/canvas/ClientWebGLContext.cpp:35
Severity: -- → S3
Priority: -- → P3
See Also: → 1651823
See Also: 1651823
Assignee: nobody → snorp
Status: NEW → ASSIGNED
Pushed by jwillcox@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4ad9da0a5193
Avoid crash in ~SharedSurace_SurfaceTexture() when GLContext is lost r=sotaro,jgilbert
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: