Bug 1659681 - Avoid crash in ~SharedSurace_SurfaceTexture() when GLContext is lost r=sotaro,jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D88889